adds disasters to vedant