@@ -4,4 +4,3 @@ click the plus and add the javafxs/"OS"/lib
 
 then between the run button and the hammer click the drop down
 go to edit configuration, in VM options type in
---module-path "Path to FarmingSimulator"/javafxs/"OS"/lib --add-modules=javafx.controls,javafx.fxml
